2008-06-07  Neal H. Walfield  <neal@gnu.org>

	* pthread/pt-internal.h (__pthread_queue_iterate): Use 1, not
	true.
	(__pthread_dequeuing_iterate): Likewise.

2008-06-05  Neal H. Walfield  <neal@gnu.org>

	* sysdeps/l4/hurd/pt-thread-alloc.c (__pthread_thread_alloc):
	Replace use of as_slot_ensure with as_ensure.

2008-06-01  Neal H. Walfield  <neal@gnu.org>

	* include/pthread/pthread.h (PTHREAD_MUTEX_RECURSIVE_INITIALIZER_NP):
	New definition.
	* sysdeps/generic/bits/mutex.h
	(__PTHREAD_MUTEX_RECURSIVE_INITIALIZER): New definition.
	* sysdeps/generic/bits/mutex-attr.h (__pthread_recursive_mutexattr):
	New definition.
	* sysdeps/generic/pt-mutexattr.c (__pthread_recursive_mutexattr):
	New declaration.
	* sysdeps/generic/pt-mutex-init.c (_pthread_mutex_init): If ATTR
	is &__PTHREAD_RECURSIVE_MUTEXATTR, don't allocate a copy, just
	save in MUTEX->ATTR.
	* sysdeps/generic/pt-mutex-destroy.c (_pthread_mutex_destroy): If
	MUTEX->ATTR is &__PTHREAD_RECURSIVE_MUTEXATTR, don't free it.

2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>

	* headers.m4: Link files into `sysroot/include/' instead of `include/'.
	Create symbolic link to package's library in `sysroot/lib/'.
	* Makefile.am [ENABLE_TESTS]: Don't build package's library.

	* sysdeps/generic/sem-timedwait.c: Don't include <error.h>.

2008-05-29  Neal H. Walfield  <neal@gnu.org>

	* sysdeps/l4/hurd/pt-sysdep.h Include <hurd/exceptions.h>.
	(EXCEPTION_AREA_SIZE): Define.
	(EXCEPTION_AREA_SIZE_LOG2): Likewise.
	(EXCEPTION_PAGE): Likewise.
	(PTHREAD_SYSDEP_MEMBERS): Change object's type to an addr_t.
	Update users.  Remove field exception_page, replace with
	exception_area.  Add field exception_area_va.
	* sysdeps/l4/hurd/pt-thread-alloc.c: Include <hurd/as.h> and
	<hurd/addr.h>.
	(__pthread_thread_alloc): Allocate EXCEPTION_AREA_SIZE bytes of
	address space.  Save it in THREAD->EXCEPTION_AREA_VA.  Allocate a
	page for each page in that area.  Save them in
	THREAD->EXCEPTION_AREA.